# dummy-test

./: Makefile.am  configure.ac
src/: Makefile.am  dummy-test.c
